--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 #quiz-container {
     width: 50%;
-    background-color: #eee9bd;
+    background-color: #f0e473;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -91,7 +91,7 @@ button:disabled {
 .navigation button {
     padding: 10px 20px;
     margin-right: 10px;
-    background-color: #007bff;
+    background-color: #6be062;
     color: white;
     border: none;
     border-radius: 4px;
@@ -101,7 +101,7 @@ button:disabled {
 }
 
 .navigation button:hover {
-    background-color: #0056b3;
+    background-color: #0d9003;
 }
 
 #submit-button {
